[FIX] Sub menu icon not aligned

--- a/src/editor/styles/MenuSub.css
+++ b/src/editor/styles/MenuSub.css
@@ -9,6 +9,7 @@
 	background-color: var(--main-bg-color);
 	position: relative;
 	display: flex;
+	align-items: center;
 	gap: 10px;
 }
 
